--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "6.6.0",
+    "bootstrap": "5.3.3",
+    "chart.js": "4.4.4",
+    "lucide-react": "latest",
     "react": "^18.0.0",
     "react-dom": "18.3.1",
-    "react-scripts": "^4.0.0",
-    "lucide-react": "latest",
-    "recharts": "2.9.0",
     "react-router-dom": "latest",
-    "chart.js": "4.4.4",
-    "bootstrap": "5.3.3",
-    "@fortawesome/fontawesome-free": "6.6.0"
+    "react-scripts": "^5.0.1",
+    "recharts": "2.9.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "typescript": "^4.0.0"
@@ -24,5 +25,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
