--- a/src/package.json
+++ b/src/package.json
@@ -8,12 +8,21 @@
     "react-router-dom": "latest",
     "chart.js": "4.4.4",
     "bootstrap": "5.3.3",
-    "@fortawesome/fontawesome-free": "6.6.0"
+    "@fortawesome/fontawesome-free": "6.6.0",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "typescript": "^4.0.0"
   },
-  "main": "/index.tsx"
+  "main": "/index.tsx",
+"scripts": {
+  "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+  "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+  "test": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
+  "eject": "react-scripts eject"
 }
+
+}
+
